apps/postgrest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgrest
  namespace: postgrest
  labels:
    app.kubernetes.io/name: postgrest
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: postgrest
  ports:
    - name: http
      port: 80
      targetPort: http
